--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
   </head>
   <body>
     {{>header}}
+    <p>This site was created by Pam Tanaval. It uses data from mapbox.com and weatherstack.com!</p>
     <img src="/img/me.jpg" />
     {{>footer}}
   </body>
